pkg/config/analysis/analyzers/testdata/virtualservice_destinationhosts_customdomain.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
  annotations:
    networking.istio.io/exportTo: hello1,hello2,. # export to hello1, hello2 and the namespace itself belongs to
  labels:
    app: hello
    service: hello
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: hello
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  # This is cross-namespace, but not a problem, details has explicit networking.istio.io/exportTo=hello1,hello2,.
  name: hello
  namespace: hello1
spec:
  hosts: [hello.hello.svc.custom.local]
  http:
    - route:
        - destination:
            host: hello.hello.svc.custom.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  # This is cross-namespace, but not a problem, details has explicit networking.istio.io/exportTo=hello1,hello2,.
  name: hello
  namespace: hello2
spec:
  hosts: [hello.hello.svc.cluster.local]
  http:
    - route:
        - destination:
            host: hello.hello.svc.cluster.local
